# lora_sdr_experiments

./: README.md  pyproject.toml
data/: lora_meshtastic_modem_presets.sigmf-data  lora_meshtastic_modem_presets.sigmf-meta
scripts/: examine_lora_recording.ipynb  send_each_modem_preset.ipynb
